# EMalgorithm

./: .gitignore  CMakeLists.txt  README.md  em.py  em.txt
hy_EMlog/: INFO20201015-201122.194418  INFO20201015-201302.194599  INFO20201015-201343.194698  INFO20201015-202040.195033  INFO20201015-202121.195107  INFO20201015-202242.195184  INFO20201015-202813.195481  INFO20201015-202840.195545  INFO20201015-203005.195638  INFO20201015-203356.195951  INFO20201015-203540.196086  INFO20201015-203630.196136  INFO20201015-203642.196147  INFO20201015-204145.196417  INFO20201015-204247.196510
src/: DataBase.h  DataHelper.cpp  DataHelper.h  Def.h  EMalgorithm.cpp  EMalgorithm.h  GMmodel.cpp  Model.h  main.cpp
